# Audio-Mix-Analyzer

./: .gitignore  README.md
backend/: README.md  main.py  pyproject.toml
backend/analysis/: audio_converter.py  audio_embeddings.py  audio_features.py  comments.py  pipeline.py
backend/analysis/audio/: audio_embeddings.py  audio_features.py
backend/analysis/llm/: audio_analysis_generator.py  audio_analysis_prompt.py  report_generator.py
backend/analysis/utils/: file_upload.py  helper.py  process_pool_executor.py
backend/pipeline/: analyze_track_complete.py
frontend/my-app/: index.html  package.json
frontend/my-app/src/: App.tsx  main.tsx
frontend/my-app/src/app/: App.tsx  MainView.css  MainView.tsx  types.ts
frontend/my-app/src/components/Footer/: Footer.css  Footer.tsx
frontend/my-app/src/components/Graphics/: spectrum_energies_graphic.tsx
frontend/my-app/src/components/Main-View/: main-view.tsx
frontend/my-app/src/components/MetricCard/: MetricCard.tsx
frontend/my-app/src/components/Tabs/: tabs.tsx
frontend/my-app/src/features/analysis/: AnalysisReport.tsx  AnalysisTabs.tsx  MetricsDashboard.tsx
frontend/my-app/src/features/upload/: UploadAnalyze.css  UploadAnalyze.tsx  types.ts
frontend/my-app/src/services/api/: analysisService.ts
frontend/my-app/src/styles/: App.css  index.css
frontend/my-app/src/types/: analysis.ts
