[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.123.5",
    "librosa>=0.11.0",
    "openl3>=0.4.2",
    "pandas>=2.3.3",
    "pydub>=0.25.1",
    "pyloudnorm>=0.1.1",
    "python-multipart>=0.0.20",
    "transformers>=4.57.3",
    "uvicorn>=0.38.0",
]
