[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "dotenv>=0.9.9",
    "fastapi>=0.123.5",
    "groq>=0.37.1",
    "librosa>=0.11.0",
    "matplotlib>=3.10.8",
    "pandas>=2.3.3",
    "pydub>=0.25.1",
    "pyloudnorm>=0.1.1",
    "python-multipart>=0.0.20",
    "slowapi>=0.1.9",
    "transformers>=4.57.3",
    "uvicorn>=0.38.0",
]
